@@ -1743,3 +1743,6 @@ or list of images to sum together, as suggested by Andy McNeil.
 Created genBSDF script to generate BSDF in Windows XML format.
 
 Modified mkillum to accept detailed geometry from BSDF XML files.
+
+Altered obj2rad to ignore zero normals (thanks to Jack de Valpine for
+suggestions and help).
